[package]
name = "rtv"
version = "3.0.0"
edition = "2021"
authors = ["foxcirc"]
description = "Minimal HTTP/S client that supports nonblocking and streaming requests using mio."
keywords = ["http", "client", "simple", "nonblocking", "mio"]
categories = ["web-programming", "web-programming::http-client"]
repository = "https://github.com/Foxcirc/rtv"
readme = "readme.md"
license = "MIT"

[package.metadata.docs.rs]
all-features = true

[lib]
doctest = false

[features]
default = ["tls"]
tls = ["rustls", "webpki-roots"]

[dependencies]
mio          = { version = "0.8.*", features = ["net", "os-poll", "os-ext"] }
dns-parser   = { version = "0.8.0" }
chunked_transfer = "1.5.0" # this dependecy is included as a module since some changes were made
httparse = "1.8.0"
rustls       = { version = "0.21.*", optional = true }
webpki-roots = { version = "0.23.*", optional = true }
futures-lite = "2.2.0" # todo: make optional (simleClient feature)
futures-core = "0.3.30" # todo ^^^
futures-io = "0.3.30"

[dev-dependencies]
extreme = "6.*"
