[package]
name = "rtv"
version = "4.0.0"
edition = "2021"
authors = ["foxcirc"]
description = "Minimal HTTP/S client that supports nonblocking and streaming requests using mio."
keywords = ["http", "client", "simple", "nonblocking", "mio"]
categories = ["web-programming", "web-programming::http-client", "asynchronous"]
repository = "https://github.com/Foxcirc/rtv"
readme = "readme.md"
license = "MIT"

[package.metadata.docs.rs]
all-features = true

[lib]
doctest = false

[features]
default = ["tls", "async"]
tls = ["rustls", "webpki-roots"]
async = ["futures-lite", "futures-io"]

[dependencies]
mio = { version = "0.8.*", features = ["net", "os-poll", "os-ext"] }
dns-parser = { version = "0.8.*" }
chunked_transfer = "1.5.*"
httparse = "1.8.*"
rustls       = { version = "0.21.*", optional = true }
webpki-roots = { version = "0.23.*", optional = true }
futures-lite = { version = "2.2.*",  optional = true }
futures-io   = { version = "0.3.*", optional = true }

[dev-dependencies]
extreme = "6.*"
